--- a/09-Mentoring-05/lma/src/main/resources/templates/books/list-books.html
+++ b/09-Mentoring-05/lma/src/main/resources/templates/books/list-books.html
@@ -20,6 +20,12 @@
               <h3>Book Directory</h3>
               <hr>
       
+			    <!-- Add a button -->
+			    <a th:href="@{/books/bookFormDisplay}"
+			        class="btn btn-primary btn-sm mb-3">
+			        Add Book
+			    </a>                        
+      
               <table class="table table-bordered table-striped">
                   <thead class="thead-dark">
                       <tr>
@@ -38,6 +44,35 @@
                           <td th:text="${tempBook.category}" />
       
                           <td>
+                          
+							    <div class="row">
+							        <div class="col-small">
+							            <!-- Add "update" button/link -->
+							            <form action="#" th:action="@{/books/bookFormDisplayUpdate}" method="POST">
+							
+							                <input type="hidden" name="bookId" th:value="${tempBook.id}" />
+							                <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">Update</button>
+							
+							            </form>
+							        </div>
+							        
+							        
+								    <div class="col-small">
+								        <!-- Add "delete" button/link -->
+								        <form action="#" th:action="@{/books/delete}" method="POST">
+								
+								            <input type="hidden" name="bookId" th:value="${tempBook.id}" />
+								            <button type="submit" class="btn btn-danger btn-sm"
+								                onclick="if (!(confirm('Are you sure you want to delete this book?'))) return false">
+								                Delete
+								            </button>
+								
+								        </form>
+								    </div>                        
+							        
+							    </div>    
+							    
+							                             
                           </td>
       
       
