--- a/10-Lab-05/ems/src/main/resources/templates/list-employees.html
+++ b/10-Lab-05/ems/src/main/resources/templates/list-employees.html
@@ -54,6 +54,19 @@
 
                     <td>
 
+						<div class="row">
+						    <div class="col-small">
+						        <!-- Add "update" button/link -->
+						        <form action="#" th:action="@{/employees/showEmployeeForm_Update}" method="POST">
+						
+						            <input type="hidden" name="employeeId" th:value="${employee.id}" />
+						            <button type="submit" class="btn btn-info btn-sm ml-3 mr-1">Update</button>
+						
+						        </form>
+						    </div>
+						</div>                    
+
+
                     </td>
                 </tr>
             </tbody>
