Support for Delete Employee

--- a/10-Lab-05/ems/src/main/resources/templates/list-employees.html
+++ b/10-Lab-05/ems/src/main/resources/templates/list-employees.html
@@ -55,6 +55,8 @@
                     <td>
 
 						<div class="row">
+						    
+						    
 						    <div class="col-small">
 						        <!-- Add "update" button/link -->
 						        <form action="#" th:action="@{/employees/showEmployeeForm_Update}" method="POST">
@@ -64,6 +66,21 @@
 						
 						        </form>
 						    </div>
+						    
+						    
+							<div class="col-small">
+							    <!-- Add "delete" button/link -->
+							    <form action="#" th:action="@{/employees/delete}" method="POST">
+							
+							        <input type="hidden" name="employeeId" th:value="${employee.id}" />
+							        <button type="submit" class="btn btn-danger btn-sm"
+							            onclick="if (!(confirm('Are you sure you want to remove this employee?'))) return false">
+							            Delete
+							        </button>
+							
+							    </form>
+							</div>     
+						    
 						</div>                    
 
 
